--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "loan-caluclator-1",
   "version": "0.1.0",
-  "homepage": "http://akmaurya9410.github.io/bfcroy.git",  
+  "homepage": "https://avinashbfc.github.io/bfcroy1",  
   "devDependencies": {
     "gh-pages": "^3.1.0",
     "react-scripts": "^3.4.3"
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-	"predeploy": "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   }
 }
